fix overflow
better mobile UI and layout

--- a/src/App.css
+++ b/src/App.css
@@ -10,12 +10,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  overflow-x: hidden;
 }
 
 .textField{
 
-height: 20px;;
+
+  height: 25px;
+  font-size: 20px;
+  width: 300px;
 
 }
 .App-logo {
